# bughouse.app

./: .gitattributes  .gitignore  .oauth.txt  CONTRIBUTING.md  README.md  RUNNING.md  users.sql
backend/: Dockerfile  build.sh  docker-compose.yml  wrapper.sh
backend/conf/: 30-bug-ws.conf  31-bug-fire.conf
backend/db/: .gitattributes  Dockerfile  README.md  bughouse.cql  build.sh  dev_seed.cql  init.sh  run.sh  save.sh  test_seed.cql
backend/db/rust_client/: Cargo.toml
backend/db/rust_client/src/: main.rs
backend/firebase/: README.md  dev_daemon.sh  go.mod  go.sum  run.sh  server.go
backend/misc/print_p/: Cargo.toml  README.md
backend/misc/print_p/src/: main.rs
backend/misc/ws_test/backend/rust/: Cargo.toml
backend/misc/ws_test/backend/rust/static/: index.html
backend/redis/: README.md  docker.sh
backend/web/: 2_syllable_adjectives.txt  Cargo.toml  Dockerfile  README.md  build.rs
backend/web/src/: b66.rs  bug_web_sock.rs  bughouse_server.rs  connection_mgr.rs  db.rs  error.rs  firebase.rs  game.rs  game_json.rs  game_row.rs  games.rs  hash.rs  lib.rs  observers.rs  players.rs  rating.rs  subscriptions.rs  time_control.rs  users.rs
backend/web/src/async_graphql_actix_web/: README.md  lib.rs  mod.rs  subscription.rs
backend/web/src/graphql/: mod.rs  query.rs  rfc_3339.rs  user_games_fetcher.rs
backend/web/src/guest/: mod.rs
backend/web/src/seeks/: seek_pod.rs  seek_user_handler.rs  seeks.rs
db/: README.md  bughouse.cql
db/rust_clint/: Cargo.toml
docs/: TODO.md  development.md  games.md  pending.md  ratings.md  style12.md
docs/FICS/: README.md  bug.md  challenge.md  tells.md
docs/img/: Chess-Knight_blurred.xcf  Chess-Knight_fancy.xcf  blue_pink.xcf  blurred_horsies_fancy_v2.xcf  crisp_horsies_v2.xcf  dark.xcf  dark2.xcf
frontend/react-app/: localhost.crt  localhost.key  package.json
frontend/react-app/data/: schema.graphql
frontend/react-app/public/: TOS.html  privacy.htm
frontend/react-app/src/: App.css  App.react.js  AppSignOut.js  Bugwho.react.js  Challenges.react.js  Errors.react.js  FirebaseLogin.react.js  GamingLanding.react.js  Login.react.js  Main.react.js  Offers.react.js  RelayEnvironment.js  SideMenu.react.js  Status.react.js  UserName.react.js  getUrl.js  logout.js
frontend/react-app/src/auth/: AuthProvider.js  FakeUserSelect.react.js  firebase-init.js
frontend/react-app/src/game/: Analysis.react.js  AnalysisMoves.react.js  AnalysisState.js  Arena.react.js  Board.react.js  BoardGutter.react.js  BughouseGame.js  ChessBoard.js  ClockDisplay.react.js  GameOverMessage.react.js  GameStartCountdown.react.js  GameStatusSource.js  HandleDisplay.react.js  HeldPiece.react.js  Holdings.react.js  PromotionDialog.react.js  ScreenLock.js  Table.react.js
frontend/react-app/src/socket/: SocketProxy.js
frontend/react-app/src/user/: OnlinePlayers.react.js  OnlineUsers.js  Profile.react.js  UserGames.react.js  UsersProvider.js  ViewerProvider.js
frontend/site/: .gcloudignore  cleanup_versions.sh
frontend/site/react-app/: .gitignore  README.md  ensure-env.sh  localhost.key  package.json
frontend/site/react-app/public/: index.html
frontend/site/react-app/src/: AppSignOut.js  Errors.react.js  FirebaseLogin.react.js  FormTable.react.js  Login.react.js  LooseLogin.react.js  PublicTables.react.js  SideMenu.react.js  StyledTableRow.react.js  Team.react.js  Unpartnered.react.js  UnpartneredPlayer.react.js  index.js
frontend/socket/: .eslintrc.js
redis/: start.sh
scripts/: upload.sh
web/: bughouse.conf  line_count.sh  proxy.conf  ssh-vm.sh
web/site/: .gcloudignore  package.json
web/site/react-app/: .env.dev  .gitignore  :w  ensure-chessground.sh  ensure-env.sh  localhost.crt  localhost.key  package.json  socket-client.js
web/site/react-app/debug/: server.crt  server.csr  server.key  server.key.org
web/site/react-app/public/: index.html  manifest.json
web/site/react-app/src/: #Arena.react.js#  .#Arena.react.js  App.css  App.js  App.test.js  (+52 more)
web/socket/: .gcloudignore  .gitignore  BoardParser.js  BughouseState.js  CmdDelegate.js  FicsClient.js  FicsManager.js  FicsParser.js  GameObserver.js  GameStartParser.js  Pending.js  README.md  SocketManager.js  app.js  bug.md  log.js  makeAdmin.js  node-telnet-client.js  package-lock.json  package.json  preinstall.sh  ssh-vm1.sh  upload.sh  websocket.yaml
web/socket/firebase-go-srv/: README.md  run.sh  server.go
web/socket/nodejs/: GameObserver.js  GameStartParser.js  README.md  Regex.js  app.js  package-lock.json  package.json  preinstall.sh  run.sh  websocket.yaml
web/socket/rust/: 2_syllable_nouns.txt  Cargo.toml  README.md  build.rs
web/socket/rust/src/: b66.rs  b73.rs  b73_encode.rs  bug_web_sock.rs  bughouse_server.rs  connection_mgr.rs  db.rs  error.rs  firebase.rs  game.rs  game_json.rs  game_row.rs  games.rs  guest_handle.rs  hash.rs  lib.rs  main.rs  messages.rs  observers.rs  players.rs  rating.rs  seek_constraint.rs  seek_pod.rs  seek_user_handler.rs  seeks.rs  subscriptions.rs  time_control.rs  users.rs
web/socket/rust/src/async_graphql_actix_web/: lib.rs
web/socket/rust/src/graphql/: query.rs
web/socket/rust/src/guest/: adjectives.rs  guest_handle.rs  mod.rs  nouns.rs
web/socket/rust/src/seeks/: mod.rs  seek_user_handler.rs  seeks.rs
web/socket/simple-echo-server/: README.md
web/ws_test/: README.md
web/ws_test/frontend/: .gitignore  .vm1_external_ip  build_package.sh  package_template.json
website/: .gcloudignore  main.py
website/static/: script.js  style.css
website/templates/: index.html
(+86 files in other folders)
