[package]
name = "bughouse_app"
version = "0.0.1"
authors = ["John Watson <jrwats@gmail.com>"]
edition = "2018"

[lib]
name = "bughouse_app"
path = "src/lib.rs"

[[bin]]
name = "bug-wss"
path = "src/bin/main.rs"

[[bin]]
name = "b66"
path = "src/bin/b66.rs"

[dependencies]
# actix = "0.10"
# actix-codec = "0.3"
# actix-files = "0.3"
# actix-web = "3"
# actix-web-actors = "3"
async-channel = "1.6.1"
async-graphql = "4.0.4"
async-graphql-actix-web = "4.0.4"
actix = "0.13"
actix-cors = "0.6.1"
actix-files = "0.6.1"
actix-http = "3.2.1"
actix-redis = "^0.12"
actix-session = { version = "^0.7", features = ["redis-actor-session"] }
# actix-web = {version = "4.1.0", default-features = false}
actix-web = "4.1.0"
actix-web-actors = "4.1.0"

anyhow = "1.0.58"

bughouse = "0.0.11"
bytes = "1.1.0"
bytestring = "1.1.0"
chrono = "0.4.19"
# cons-list = "0.0.3"
env_logger = "0.9"
fplist = { version = "0.2.1", features = ["multithreaded"] }
futures = "0.3.6"
futures-util = { version = "0.3.17", default-features = false }
jsonwebtoken = "^7.2.0"
lazy_static = "1.4.0"
noneifempty = "0.1.3"
num = "^0.4.0"
num-derive = "0.3.3"
num-integer = "0.1.44"
num-traits = "0.2.14"
once_cell = "1.8.0"
scylla = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.0"
thiserror = "1.0"
time = "0.3.1"
timer = "0.2.0"
tokio = { version = "1.3", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v1", "v4", "v5"] }

# [patch.crates-io]
# actix-web = { path = "../../../../actix-web" }
