[package]
name = "rust_client"
version = "0.1.0"
authors = ["John Watson <jrwats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.1.0"
anyhow = "1.0.33"
futures = "0.3.6"
openssl = "0.10.32"
rustyline = "6.3.0"
tokio = {version = "1.18.5", features = ["full"]}
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
chrono = "0.4"
uuid = "0.8.1"
