[package]
name = "bughouse_websocket_gameserver"
version = "0.0.1"
authors = ["John Watson <jrwats@gmail.com>"]
edition = "2018"

[[bin]]
name = "bug-wss"
path = "src/main.rs"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-files = "0.3"
actix-web = "3"
actix-web-actors = "3"
bughouse = "0.0.5"
bytes = "0.5.3"
chrono = "0.4"
env_logger = "0.8"
futures = "0.3.6"
lazy_static = "1.4.0"
noneifempty = "0.1.3"
num-integer = "0.1.44"
scylla = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.7.1", features = ["full"]}
uuid = {version = "0.8.1", features = ["serde", "v1", "v4", "v5"] }

