[package]
name = "bughouse_websocket_gameserver"
version = "0.0.1"
authors = ["John Watson <jrwats@gmail.com>"]
edition = "2018"

[[bin]]
name = "bug-wss"
path = "src/main.rs"

[dependencies]
# actix = "0.10"
# actix-codec = "0.3"
# actix-files = "0.3"
# actix-web = "3"
# actix-web-actors = "3"
actix = "0.12"
actix-files = "0.6.0-beta.6"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"

bughouse = "0.0.11"
bytes = "0.5.3"
bytestring = "1"
cached = "0.24.1"
chrono = "0.4"
env_logger = "0.8"
futures = "0.3.6"
lazy_static = "1.4.0"
noneifempty = "0.1.3"
num-integer = "0.1.44"
once_cell = "1.8.0"
scylla = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
timer = "0.2.0"
tokio = { version = "1.3", features = ["full"] }
uuid = {version = "0.8.1", features = ["serde", "v1", "v4", "v5"] }

