[package]
name = "bughouse_app"
version = "0.0.1"
authors = ["John Watson <jrwats@gmail.com>"]
edition = "2018"

[lib]
name = "bughouse_app"
path = "src/lib.rs"

[[bin]]
name = "bug-wss"
path = "src/bin/main.rs"

[[bin]]
name = "b66"
path = "src/bin/b66.rs"

[dependencies]
# actix = "0.10"
# actix-codec = "0.3"
# actix-files = "0.3"
# actix-web = "3"
# actix-web-actors = "3"
actix = "0.12"
actix-cors = "0.6.0-beta.2"
actix-files = "0.6.0-beta.7"
actix-redis = "^0.10.0-beta.2"
actix-session = "^0.5.0-beta.2"
actix-web = {version = "4.0.0-beta.8", default-features = false}
actix-web-actors = "4.0.0-beta.7"

bughouse = "0.0.11"
bytes = "0.5.3"
bytestring = "1"
chrono = "0.4"
# cons-list = "0.0.3"
env_logger = "0.8"
fplist = {version = "0.2.1", features = ["multithreaded"] }
futures = "0.3.6"
jsonwebtoken = "^7.2.0"
lazy_static = "1.4.0"
noneifempty = "0.1.3"
num = "^0.4.0"
num-derive = "0.3.3"
num-integer = "0.1.44"
num-traits = "0.2.14"
once_cell = "1.8.0"
scylla = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = "0.3.1"
timer = "0.2.0"
tokio = { version = "1.3", features = ["full"] }
uuid = {version = "0.8.1", features = ["serde", "v1", "v4", "v5"] }

