[package]
name = "rust_websocket"
version = "2.0.0"
authors = ["John Watson <jrwats@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-server"
path = "src/main.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.1"
bytes = "0.5.3"

